--- a/index.html
+++ b/index.html
@@ -10,11 +10,19 @@
 
   <body>
 
-    <div class="container">
+    <nav class="nav justify-content-left navBar">
+      <img src="C:\Users\AhmetSalih\Desktop\Me\Front_End\Riot_Test_Project\imgs\logo.bmp" style="height: 40px; margin-left: 30px" alt="" class="lollogo body">
+      <a class="nav-link active navBarText" aria-current="page" href="#">Active</a>
+      <a class="nav-link navBarText" href="#">Link</a>
+      <a class="nav-link navBarText" href="#">Link</a>
+      <a class="nav-link disabled navBarText">Disabled</a>
+    </nav>
+
+    <div class="container containerBackground" style="padding: 50px">
       <div class="row align-items-start">
-        <h1 style="text-align: center;">League Of Legends Hesap Arama</h1>
+        <h1 class="h1Text" style="text-align: center;">League Of Legends Hesap Arama</h1>
         <form class="d-flex justify-content-center mt-3">
-            <input class="d-flex p-1" placeholder="TR Summoner Name" id="textBox"></input>
+            <input class="d-flex p-1 textbox" placeholder="TR Summoner Name" id="textBox"></input>
             <button id="buttonSearch" value ="Submit" type="submit" class="btn btn-primary d-flex p-1">Hesap Ara</button>
             <div class="dropdown">
               <button id="sumNameButton" class="btn btn-secondary dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false">
@@ -28,29 +36,34 @@
             </div>
         </form>
 
-        <div class="col-5" style="background-color: aqua;">
+        <div class="col-5 profileDiv">
           <div class="row">
 
             <div  class="max-width:%50 col-5">
-              <img class="mt-2 rounded float-start profileIcon" id="sumIcon" src="https://picsum.photos/150/150" alt="">
+              <img class="mt-3 rounded float-start profileIcon" id="sumIcon" src="https://picsum.photos/150/150" alt="">
             </div>
             <div class="d-flex justify-content-left row col-4">
-              <p class="mt-3" id="">Kullanici Adi:</p>
-              <p id="">Seviye: </p>
-              <p id="">Lig: </p>
-              <p id="">Lig Seviyesi: </p>
+              <p class="mt-3 navBarText" id="">Kullanici Adi:</p>
+              <p class="navBarText" id="">Seviye: </p>
+              <p class="navBarText" id="">Lig: </p>
+              <p class="navBarText" id="">Lig Seviyesi: </p>
             </div>
             <div class="d-flex justify-content-left row col-3">
-              <p class="mt-3" id="accName">------</p>
-              <p id="accLevel">------</p>
-              <p id="accTier">------</p>
-              <p id="accRank">------</p>
+              <p class="mt-3 navBarText" id="accName">------</p>
+              <p class="navBarText" id="accLevel">------</p>
+              <p class="navBarText" id="accTier">------</p>
+              <p class="navBarText" id="accRank">------</p>
             </div>
           </div>
         </div>
 
-        <div id="matchHistory" class="col-7">
-
+        <div class="col-1">
+        </div>
+        
+        <div id="matchHistory" class="col-6 matchHistoryDiv">
+          <div id="historyBox" class="row">
+              
+          </div>
         </div>
       </div>
 
